[package]
name = "rust_practices"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hello"

[[bin]]
name = "guessing_game"

[[bin]]
name = "immutable_mutable"

[[bin]]
name = "data_types"

[[bin]]
name = "some_functions"

[[bin]]
name = "function_demos"

[[bin]]
name = "loops"

[[bin]]
name = "ownership"

[[bin]]
name = "references_borrowing"

[dependencies]
rand = "0.8.5"
